--- a/changelog.d/39.misc.md
+++ b/changelog.d/39.misc.md
@@ -1,3 +1,2 @@
-The lowest supported version of `python` for `asv_runner` and its companion
-projects (`asv`) is now `3.8`, since `3.7` has been EOL for [many months
+The lowest supported version of `python` for building the `asv_runner` documentation is now `3.8`, since `3.7` has been EOL for [many months
 now](https://endoflife.date/python).
